# trtorch-test

./: CMakeLists.txt  download_libtorch.sh  error_message.txt  gdb_bt_result.txt  main.cpp  model.py
docker/: Dockerfile
